--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,21 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+      <style>
+        .loading {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          height: 100vh;
+          font-size: 16px;
+          color: #666;
+        }
+      </style>
+      <div class="loading">
+        页面加载中，请稍候...
+      </div>
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
